Added working socket

--- a/configs/deamon.yaml
+++ b/configs/deamon.yaml
@@ -1,4 +1,6 @@
-filepaths:
+logger:
   # logs: "/var/log/feather-deamon.log"
-  logs: "/home/igor/repos/feather-deamon/feather-deamon.log"
-  socket: "/var/run/feather.sock"
+  path: "/home/igor/repos/feather-deamon/feather-deamon.log"
+  max-lines: 150
+socket:
+  path: "/var/run/feather.sock"
